--- a/finished-project/package.json
+++ b/finished-project/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed:vitamins": "node scripts/seedVitamins.js"
+    "seed:vitamins": "node scripts/seedVitamins.js",
+    "list:models": "node scripts/listModels.js"
   },
   "keywords": [
     "external-api",
