--- a/finished-project/package.json
+++ b/finished-project/package.json
@@ -34,7 +34,9 @@
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.3"
+    "nodemailer": "^6.9.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
